# boids-simulations-sycl

./: .gitignore  .gitmodules  CMakeLists.txt  param_gererator.py  tets
python/: Boid.py  computing.py  shower.py  v1.py
src/: Boid.hpp  GLWindow.hpp  MidiDecoder.hpp  Queue.hpp  main.cpp
src/old/: Boid.hpp  Boid.hpp.old  main.cpp
